--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -2,7 +2,7 @@
     <img class="backImg" src="https://c0.wallpaperflare.com/preview/318/2/423/pr4r2m4evt2u4aishdff44upth.jpg" alt="">
 
     <div class="innerEdu">
-        <h2>Education Background</h2>
+        <h2 class="mainHeading">Education Background</h2>
         <div class="imgAndDetails">
             <div class="img">
                 <img src="https://futurevolve.com/uploads/college/wide_image/8302/DKTE_Image.JPG" alt="">
