--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,1 +1,12 @@
-<p>resume works!</p>
+
+<div class="backImg">
+    <h2 class="mainHeading">My Resume</h2>
+    <div class="image">
+        <img src="assets/harshalResume.png" alt="">
+    </div>
+    <div class="btnDownload">
+        <button class="downloadBtn">
+            <a href="assets/HarshalShelarResume.pdf" download><i class="fa fa-download"></i> &nbsp; &nbsp;Download</a>
+        </button>
+    </div>
+</div>
