--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -2,7 +2,7 @@
     <img class="backImg" src="https://c1.wallpaperflare.com/preview/547/595/807/business-computer-contemporary-dark.jpg" alt="">
     
     <div class="workInfo">
-        <h1 class="heading">Work Experience</h1>
+        <h1 class="mainHeading">Work Experience</h1>
         <div class="cards">
             <div class="card">
                 <div class="imgComp" style="text-align: center;">
