--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -12,14 +12,6 @@
         width: 800px;
         text-align: center;
 
-        h2{
-            font-size: 60px;
-            background-image: repeating-linear-gradient(to right, #ffb703, rgb(0, 132, 255) 10%, #3c9a44 20%);
-            color: transparent;
-            background-clip: text;
-            -webkit-background-clip: text;
-            padding-top: 5rem;
-        }
         .imgAndDetails{
             display: flex;
             align-items: center;
@@ -33,8 +25,7 @@
                     width: auto;
                     border-radius: 10px;
                     z-index: 999;
-                    opacity: 0.5;
-                    // box-shadow: 0px 0px 15px 1px rgb(121, 121, 121);
+                    box-shadow: 0px 0px 15px 1px rgb(121, 121, 121);
                 }
             }
             .details{
